src/test/deca/context/valid/created/call_field2.deca
//Description :
// Test d'appel d'attribut
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    protected float y = 3;
}

class Second {
Premiere prem = new Premiere();

 void printX(){
  print(this.prem.x);
 }

}

{
}
